code/style.css
header {
  font-family: "Candal";
  font-size: 75px;
  color: #ffffff;
  text-align: center;
  margin: 10px;
  padding: 10px;
}

body {
  margin: 0;
  font-family: "didot";
  font-size: 15px;
  background-image: url(./assets/mystery.jpg);
  background-size: contain;
}

p {
  margin: 1px;
  font-weight: 300;
  background-color: rgb(238, 238, 238);
  margin-bottom: 10px;
}


.cards {
  margin: 50px auto;
  width: 90%;
  height: 600px;
  border: solid 5px rgba(107, 190, 238, 0.63);
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.killer-deck {
  width: 268px;
  height: 400px;
  background: url(./assets/playcard.jpg);
  opacity: 0.8;
  background-size: 100%;
  text-align: center;
  padding-top: 30px;
  border-radius: 16px;
}

.weapon-deck {
  width: 268px;
  height: 400px;
  background: url(./assets/playcard.jpg);
  opacity: 0.8;
  background-size: 100%;
  text-align: center;
  padding-top: 30px;
  border-radius: 16px;
}

.room-deck {
  width: 268px;
  height: 400px;
  background: url(./assets/playcard.jpg);
  opacity: 0.8;
  background-size: 100%;
  text-align: center;
  padding-top: 30px;
  border-radius: 16px;
}

#killerImage {
  border-radius: 200px;
}

#loaderKiller, #loaderWeapon, #loaderRoom{
  display:none;
  border: 16px solid #f3f3f3;
  border-radius: 50%;
  border-top: 16px solid #ffd571;
  border-right: 16px solid #006a71;
  border-bottom: 16px solid #931a25;
  border-left: 16px solid #654062;
  width: 75px;
  height: 75px;
  position: relative;
  top:33%;
  left:31%;
  -webkit-animation: spin 2s infinite;
  animation: spin 2s infinite;
}

@-webkit-keyframes spin {
  0% { -webkit-transform: rotate(0deg); }
  100% { -webkit-transform: rotate(360deg); }
}

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

h1 { 
  font-size: 30px;
  font-family: "Candal";
  color: #f72828;
  text-align: center;
}

h2 { 
  font-weight: bold;
  font-size: 25px;
  font-family: "didot";
  color: #ffffff;
  text-align: center;
}


button {
  padding: 8px 16px;
  font-family: 'didot';
  color:black;
  background:crimson;
  border: none;
  font-size: 20px;
  border-radius: 8px;
  display: block;
  margin: 0 auto;
}

button:hover {
  background: rgb(30, 189, 210);
  color: #fff;
  cursor: pointer;
}

 /* FOOTER */

 footer {
  display:flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  padding: 0px;
  margin-top: 50px;
  background-color: rgb(94, 3, 21);
  width: 100%;
}


footer p {
  width:100%;
  text-align: center;
  font-size: 14px;
  color: rgb(255, 255, 255);
  background-color: rgb(94, 3, 21) ;
  margin:6px;
}

a:link{
  color: rgb(218, 251, 255);
}
a:visited { 
  color: rgb(168, 168, 168); 
}

footer img {
  width: 50px;
}

